# pymas

./: .gitignore  LICENSE  README.md  example_1.json  example_2.json  example_3.json  exampple_3.json  pyproject.toml  setup.cfg  setup.py
examples/: 01_beam.json  01_beam.py  02_multiple_beam.json  02_multiple_beam.py  03_frame.json  03_frame.py  makepath.py  simplest_beam.py  space_frame.py  trusses.py
examples/01_beam/: 01_beam.py
examples/01_simple_beam/: makepath.py  simple_beam.json  simple_beam.py  simplest_beam.json
examples/01_simplest_beam/: makepath.py  simplest_beam.json  simplest_beam.py
examples/02_space_truss/: space_truss.json  space_truss.py
examples/03_space_frame/: makepath.py  space_frame.json  space_frame.py
examples/04_continuous_beam/: continous_beam.py  continuous_beam.json  k.txt  makepath.py
examples/04_mas.js/: mas.js.py  space_truss-solved.json  space_truss.json  test.json
examples/simplest_beam/: makepath.py  simplest_beam.json  simplest_beam.py
examples/viga-postensada/: makepath.py  viga_postensada.py
pyFEM/: classtools.py  core.py  primitives.py
sections/: box_section.dxf
src/pyFEM/: classtools.py  core.py  primitives.py  sections.py
src/pymas/: __init__.py  classtools.py  core.py  primitives.py
test/: space_frame.py  trusses.py
