[metadata]
name = pyFEM
version = 0.0.2
author = rvcristiand
author_email = rvcristiand@unal.edu.co
description = Finite element method with python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rvcristiand/pyFEM
project_urls =
    Bug Tracker = https://github.com/rvcristiand/pyFEM/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src