[metadata]
name = pymas
version = 0.0.1
author = rvcristiand
author_email = rvcristiand@unal.edu.co
description = Direct stiffness method with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rvcristiand/pymas
project_urls =
    Bug Tracker = https://github.com/rvcristiand/pymas/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src